# kir-ai

./: .gitignore  .releaserc.json  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  mise.toml  rust-metal-inference-engine-north-star.md
crates/llm-api/: Cargo.toml
crates/llm-api/src/: error.rs  lib.rs  limits.rs  request.rs  response.rs  tool_schema.rs  types.rs  validation.rs
crates/llm-api/src/validation/: helpers.rs
crates/llm-api/tests/: openai_contract.rs
crates/llm-api/tests/openai_contract/: message_validation.rs  request_limits.rs  response_shapes.rs  sampling_controls.rs  support.rs  tool_schema.rs
crates/llm-backend/: Cargo.toml
crates/llm-backend-contracts/: Cargo.toml
crates/llm-backend-contracts/src/: lib.rs
crates/llm-backend/benches/: safetensors_bf16.rs  top_k_selection.rs
crates/llm-backend/src/: core.rs  lib.rs
crates/llm-backend/src/core/: backend.rs  deterministic.rs  math.rs  native_attention.rs  native_matvec.rs  native_text.rs  protocol_test.rs  quantized.rs  safetensors.rs
crates/llm-backend/src/core/gemma/: mod.rs  ops.rs
crates/llm-backend/src/core/qwen/: matvec.rs  mod.rs  ops.rs
crates/llm-backend/src/core/safetensors/: header.rs  math.rs
crates/llm-backend/src/core/tests/: cpu_ops.rs  gemma_native_ops.rs  safetensors_loader.rs
crates/llm-backend/tests/: cpu_ops.rs  gemma_native_ops.rs  quantized_matvec.rs  safetensors_loader.rs
crates/llm-backend/tests/safetensors_loader/: qwen_attention.rs  qwen_core.rs  qwen_dense.rs  qwen_lm_head.rs  qwen_moe.rs  shard_store.rs
crates/llm-bench/: Cargo.toml
crates/llm-bench/src/: bench_server.rs  cli.rs  compare.rs  lib.rs  main.rs  models.rs  qwen_mlx_tool.rs  tests.rs  validation.rs
crates/llm-bench/src/qwen_mlx_tool/: config.rs  metrics.rs  mod.rs  planning.rs  report.rs  runner.rs  tests.rs
crates/llm-bench/src/qwen_mlx_tool/config/: cli.rs  profiles.rs
crates/llm-bench/src/qwen_mlx_tool/metrics/: agentic_ab.rs  cache.rs  core.rs  latest.rs  prefill.rs  shared.rs  (+1 more)
crates/llm-bench/tests/: cli.rs
crates/llm-chat-template/: Cargo.toml
crates/llm-chat-template/src/: lib.rs
crates/llm-engine/: Cargo.toml
crates/llm-engine/benches/: prefix_cache_clone.rs  prefix_cache_lookup.rs
crates/llm-engine/src/: bench.rs  bench_compat.rs  engine.rs  fs_util.rs  lib.rs  main.rs  mlx.rs  model_cli.rs  native_gemma.rs  native_matvec.rs  native_qwen.rs  native_text.rs  server.rs  snapshot_backend.rs  sync_ext.rs
crates/llm-engine/src/bench/: cli.rs  qwen_mlx_tool.rs  tests.rs
crates/llm-engine/src/cli/: mod.rs  model.rs  native_probe.rs
crates/llm-engine/src/engine/: admin.rs  admin_tests.rs  error.rs  inference.rs  lifecycle.rs  metrics.rs  protocol.rs  requests.rs  router.rs  scheduler.rs  state.rs  streaming.rs
crates/llm-engine/src/mlx/: client.rs  metadata.rs  metrics.rs  protocol.rs  request.rs  sse.rs  tests.rs
crates/llm-engine/src/native_qwen/: tests.rs
crates/llm-engine/src/native_text/: driver.rs  generation.rs  prefix_cache.rs  streaming.rs
crates/llm-engine/tests/: dependency_contract.rs  http_contract.rs  model_cli.rs  native_runtime_boundary.rs
crates/llm-engine/tests/http_contract/: admin_contract.rs  chat_contract.rs  completion_contract.rs  core_contract.rs  rate_limit_contract.rs  router_builder.rs  streaming_contract.rs
crates/llm-engine/tests/model_cli/: bench_profiles.rs  bench_revision.rs  hub_endpoint.rs  model_commands.rs  serve.rs  support.rs
crates/llm-hub/: Cargo.toml
crates/llm-hub/src/: client.rs  error.rs  lib.rs  lifecycle.rs  manifest.rs  model_info.rs  plan.rs  profile.rs  prune.rs  repo.rs  store.rs
crates/llm-hub/tests/: download_plan.rs  hub_client.rs  model_store.rs
crates/llm-metal/: Cargo.toml  build.rs
crates/llm-metal/src/: device.rs  lib.rs
crates/llm-metal/src/device/: buffers.rs  command.rs  error.rs  matvec.rs  pipeline.rs  primitives.rs  qwen.rs  reductions.rs  shaders.rs  transformer.rs
crates/llm-metal/tests/: metal_smoke.rs  mlx_reference.rs
crates/llm-metal/tests/fixtures/: generate_mlx_reference.py  mlx_reference.json
crates/llm-native-runtime/: Cargo.toml
crates/llm-native-runtime/benches/: prefix_cache_clone.rs  prefix_cache_lookup.rs
crates/llm-native-runtime/src/: fs_util.rs  kv_sync.rs  lib.rs  native_gemma.rs  native_matvec.rs  native_metrics.rs  native_qwen.rs  native_text.rs  snapshot.rs  sync_ext.rs  warm_order.rs
crates/llm-native-runtime/src/native_qwen/: tests.rs
crates/llm-native-runtime/src/native_text/: disk_cache.rs  driver.rs  generation.rs  prefix_cache.rs  streaming.rs  tests.rs
crates/llm-runtime/: Cargo.toml
crates/llm-runtime/benches/: streaming_parsing.rs
crates/llm-runtime/src/: adapters.rs  backend_request.rs  cache_identity.rs  capabilities.rs  chat.rs  chat_streaming.rs  completions.rs  error.rs  json_mode.rs  lib.rs  no_progress.rs  response_validation.rs  runtime.rs  stop.rs  streaming.rs  tool_call.rs  tool_schema.rs
crates/llm-runtime/tests/: dependency_contract.rs  runtime_contract.rs
crates/llm-runtime/tests/runtime_contract/: capabilities.rs  chat.rs  completion.rs  dependency_boundary.rs  family_adapters.rs  json_mode.rs  no_progress.rs  streaming.rs  tool_validation.rs
crates/llm-server/: Cargo.toml
crates/llm-server/src/: engine.rs  lib.rs  sync_ext.rs
crates/llm-server/src/engine/: admin.rs  admin_tests.rs  config.rs  error.rs  inference.rs  lifecycle.rs  metrics.rs  rate_limit.rs  request.rs  request_body_timeout.rs  router.rs  scheduler.rs  state.rs  streaming.rs
crates/llm-server/tests/: http_smoke.rs
crates/llm-tokenizer/: Cargo.toml
crates/llm-tokenizer/src/: lib.rs
crates/llm-tokenizer/tests/: deepseek_template.rs  gemma_template.rs  hf_tokenizer.rs  llama_template.rs  model_output_fixtures.rs  qwen_template.rs
crates/llm-tool-parser/: Cargo.toml
crates/llm-tool-parser/src/: common.rs  deepseek.rs  gemma.rs  json.rs  lib.rs  llama.rs  qwen.rs  types.rs
crates/llm-tool-parser/tests/: deepseek_parser.rs  gemma_parser.rs  llama_parser.rs  model_output_fixtures.rs  qwen_parser.rs  tool_call_ids.rs  vllm_parser.rs
(+260 files in other folders)
