[workspace]
members = [
  "crates/llm-api",
  "crates/llm-backend",
  "crates/llm-bench",
  "crates/llm-engine",
  "crates/llm-hub",
  "crates/llm-kv-cache",
  "crates/llm-metal",
  "crates/llm-models",
  "crates/llm-runtime",
  "crates/llm-sampler",
  "crates/llm-server",
  "crates/llm-telemetry",
  "crates/llm-tokenizer",
  "crates/llm-tool-parser",
  "crates/llm-util",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.95"

[workspace.dependencies]
anyhow = "1.0.100"
async-stream = "0.3.6"
async-trait = "0.1.89"
axum = { version = "0.8.7", features = ["json", "macros", "tokio"] }
chrono = { version = "0.4.42", features = ["serde"] }
futures = "0.3.31"
getrandom = "0.3.4"
hex = "0.4.3"
indexmap = { version = "2.12.1", features = ["serde"] }
libc = "0.2.177"
metal = "0.33.0"
block = "0.1.6"
memmap2 = "0.9.10"
rand = { version = "0.9.4", features = ["small_rng"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "stream"] }
safetensors = "0.7.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
sha2 = "0.10.9"
schemars = { version = "1.0.0", features = ["chrono04", "derive", "uuid1"] }
subtle = "2.6.1"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring", "tls12"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.17"
tokenizers = { version = "0.23.1", default-features = false, features = ["onig"] }
tower = { version = "0.5.2", features = ["util"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "json"] }
url = "2.5.7"
uuid = { version = "1.19.0", features = ["serde", "v4", "v7"] }
