[package]
name = "llm-api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
llm-util = { path = "../llm-util" }
schemars = { workspace = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
