[package]
name = "llm-backend-contracts"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
futures.workspace = true
llm-util = { path = "../llm-util" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio-util.workspace = true

[dev-dependencies]
futures-executor.workspace = true
