[package]
name = "llm-backend"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
slow-tests = []
test-utils = []

[dependencies]
async-trait.workspace = true
futures.workspace = true
llm-kv-cache = { path = "../llm-kv-cache" }
llm-models = { path = "../llm-models" }
llm-util = { path = "../llm-util" }
memmap2.workspace = true
safetensors.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio-util.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
