[package]
name = "llm-backend"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
slow-tests = []
test-utils = []

[dependencies]
async-trait.workspace = true
llm-backend-contracts = { path = "../llm-backend-contracts" }
llm-kv-cache = { path = "../llm-kv-cache" }
llm-models = { path = "../llm-models" }
memmap2.workspace = true
safetensors.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio-util.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[[bench]]
name = "top_k_selection"
harness = false
