[package]
name = "llm-chat-template"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
llm-api = { path = "../llm-api" }
llm-models = { path = "../llm-models" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
