[package]
name = "llm-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
test-utils = ["llm-backend/test-utils"]

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
futures.workspace = true
llm-api = { path = "../llm-api" }
llm-backend = { path = "../llm-backend" }
llm-hub = { path = "../llm-hub" }
llm-metal = { path = "../llm-metal" }
llm-models = { path = "../llm-models" }
llm-runtime = { path = "../llm-runtime" }
llm-sampler = { path = "../llm-sampler" }
llm-telemetry = { path = "../llm-telemetry" }
llm-tokenizer = { path = "../llm-tokenizer" }
libc.workspace = true
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true
