[package]
name = "llm-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = [
  "mlx",
  "native-qwen",
  "native-gemma",
  "diagnostics",
  "tool-calls",
  "bench",
]
bench = ["dep:llm-bench"]
diagnostics = ["dep:llm-tokenizer"]
metal = ["dep:llm-metal"]
mlx = ["dep:reqwest", "dep:sha2", "dep:url"]
native-gemma = ["native-text"]
native-qwen = ["native-text"]
native-text = [
  "metal",
  "dep:llm-tokenizer",
  "dep:llm-sampler",
  "dep:rand",
  "dep:tokio-stream",
]
test-utils = ["llm-backend/test-utils"]
tool-calls = ["llm-server/tool-calls", "llm-telemetry/tool-calls"]

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
async-trait.workspace = true
chrono.workspace = true
futures.workspace = true
getrandom.workspace = true
llm-api = { path = "../llm-api" }
llm-backend = { path = "../llm-backend" }
llm-backend-contracts = { path = "../llm-backend-contracts" }
llm-bench = { path = "../llm-bench", optional = true }
llm-hub = { path = "../llm-hub" }
llm-metal = { path = "../llm-metal", optional = true }
llm-models = { path = "../llm-models" }
llm-runtime = { path = "../llm-runtime" }
llm-sampler = { path = "../llm-sampler", optional = true }
llm-server = { path = "../llm-server", default-features = false }
llm-telemetry = { path = "../llm-telemetry", default-features = false }
llm-tokenizer = { path = "../llm-tokenizer", optional = true }
llm-util = { path = "../llm-util" }
libc.workspace = true
rand = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
sha2 = { workspace = true, optional = true }
tokio.workspace = true
tokio-stream = { workspace = true, optional = true }
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url = { workspace = true, optional = true }

[dev-dependencies]
axum.workspace = true
llm-backend = { path = "../llm-backend", features = ["test-utils"] }
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }
tower.workspace = true

[[bench]]
name = "prefix_cache_lookup"
harness = false

[[bench]]
name = "prefix_cache_clone"
harness = false
