[package]
name = "llm-metal"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
metal.workspace = true
block.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
serde.workspace = true
serde_json.workspace = true
