[package]
name = "llm-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
async-stream.workspace = true
futures.workspace = true
llm-api = { path = "../llm-api" }
llm-backend = { path = "../llm-backend" }
llm-tokenizer = { path = "../llm-tokenizer" }
llm-tool-parser = { path = "../llm-tool-parser" }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
uuid.workspace = true

[dev-dependencies]
async-trait.workspace = true
