[package]
name = "llm-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
test-utils = ["llm-backend/test-utils"]

[dependencies]
chrono.workspace = true
async-stream.workspace = true
futures.workspace = true
llm-api = { path = "../llm-api" }
llm-backend = { path = "../llm-backend" }
llm-models = { path = "../llm-models" }
llm-tokenizer = { path = "../llm-tokenizer" }
llm-tool-parser = { path = "../llm-tool-parser" }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
uuid.workspace = true

[dev-dependencies]
async-trait.workspace = true
