[package]
name = "llm-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
test-utils = ["dep:llm-backend", "llm-backend/test-utils"]

[dependencies]
chrono.workspace = true
async-stream.workspace = true
futures.workspace = true
llm-api = { path = "../llm-api" }
llm-backend-contracts = { path = "../llm-backend-contracts" }
llm-backend = { path = "../llm-backend", optional = true }
llm-chat-template = { path = "../llm-chat-template" }
llm-models = { path = "../llm-models" }
llm-tool-parser = { path = "../llm-tool-parser" }
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-util.workspace = true
uuid.workspace = true

[dev-dependencies]
async-trait.workspace = true
llm-backend = { path = "../llm-backend", features = ["test-utils"] }
tokio = { workspace = true, features = ["test-util"] }
