[package]
name = "llm-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["tool-calls"]
test-utils = ["dep:llm-backend", "llm-backend/test-utils"]
tool-calls = ["llm-telemetry/tool-calls"]

[dependencies]
async-stream.workspace = true
async-trait.workspace = true
axum.workspace = true
futures.workspace = true
libc.workspace = true
llm-api = { path = "../llm-api" }
llm-backend-contracts = { path = "../llm-backend-contracts" }
llm-backend = { path = "../llm-backend", optional = true }
llm-hub = { path = "../llm-hub" }
llm-runtime = { path = "../llm-runtime" }
llm-telemetry = { path = "../llm-telemetry", default-features = false }
llm-util = { path = "../llm-util" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
subtle.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tokio-util.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
reqwest.workspace = true
tempfile.workspace = true
tower.workspace = true
