[package]
name = "llm-tokenizer"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
llm-chat-template = { path = "../llm-chat-template" }
sha2.workspace = true
thiserror.workspace = true
tokenizers.workspace = true
tracing.workspace = true

[dev-dependencies]
llm-api = { path = "../llm-api" }
llm-models = { path = "../llm-models" }
serde_json.workspace = true
